force-app/main/default/objects/Tester__c/fields/Acceptance_Criterion__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criterion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acceptance Criterion</label>
    <referenceTo>agf__ADM_Acceptance_Criterion__c</referenceTo>
    <relationshipLabel>Testers</relationshipLabel>
    <relationshipName>Testers</relationshipName>
    <type>Lookup</type>
</CustomField>