force-app/main/default/objects/Tester__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <formula>Acceptance_Criterion__r.Name</formula>
    <label>Criteria</label>
    <type>Text</type>
</CustomField>