force-app/main/default/objects/Tester__c/fields/Work_Subject__c.field-meta.xml
<CustomField>
    <fullName>Work_Subject__c</fullName>
    <formula>Work__r.agf__Subject__c</formula>
    <label>Work Subject</label>
    <type>Text</type>
</CustomField>