force-app/main/default/objects/Tester__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Work__c</columns>
    <columns>Work_Subject__c</columns>
    <columns>Acceptance_Criterion__c</columns>
    <columns>Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>