force-app/main/default/objects/Tester__c/listViews/Jessica_s_List.listView-meta.xml
<ListView>
    <fullName>Jessica_s_List</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Work__c</columns>
    <columns>Work_Subject__c</columns>
    <columns>Acceptance_Criterion__c</columns>
    <columns>Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Jessica</value>
    </filters>
    <label>Jessica&apos;s List</label>
</ListView>